added background transparency with gradients

--- a/index.html
+++ b/index.html
@@ -8,9 +8,154 @@
 	<link rel="icon" type="image/png" href="img/icon.png">
 </head>
 <body>
+<div class="container">
 
-	<header class="name"></header>
-	<section class="main"></section>
+	<header class="name">
+		<h1>Renee & Russell</h1>
+		<h2>March 6, 2015</h2>
+	</header>
+	<section class="main">
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</section>
 
+</div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+WELCOME
+
+Hi there! We hope you are well and thank you so much for visiting Renee and Russell’s wedding website. Here, we will provide information about Renee, Russell, Renee & Russell, the wedding party, the wedding, the party, and lodging! Poke around and enjoy. We look forward to seeing you on March 6, 2015! 
+
+OUR STORY
+	
+About the Bride: Renee Flint, born in Santa Clara, California, was raised in Milpitas, California, Sparks, Nevada, and Sacramento, California. She attended the University of Colorado at Boulder where she graduated with a degree in Theatre. After college, she moved to Chicago, Illinois where she attended cosmetology school at the Aveda Institute. She worked at a salon, where she met Russell’s step-mom, and the rest of that story is history! After meeting Russell, she made a career change, and now works in non-profit management. Currently, she is the Individual Giving Coordinator for the Art Institute of Chicago. She is head over heels in love with Russell, and loves this time in their lives! 
+
+About the Groom: 
+
+How we met: 
+	Renee:
+
+	Russell: 
+
+The Proposal: 
+	Renee:
+	
+Russell: 
+
+WEDDING PARTY
+
+Officiant – Lori (Reverend Kind Of A Big Deal) Sassali
+Matron of Honor- Hannah (Banana) Emanuel
+Best Man – Benjamin (BJ) Cooper
+Bridesmaid- Ellen (Schmellon) Emanuel
+Groomsmen - 
+Flower Girl – Bella (Bee) Sassali
+Ring Bearer - 
+V.I.P. Attendant – Sarah (SMC) McCormick
+
+CEREMONY & RECEPTION
+
+The ceremony and reception will take place at Allie’s Cabin* on Beaver Creek Mountain, in Beaver Creek Village, in Vail, Colorado. 
+
+Offering spectacular Beaver Creek Valley views, Allie’s Cabin is located in an aspen grove on Beaver Creek Mountain. The Cabin is named after Allie Townsend, known in the 19th century as the “First Lady” of Beaver Creek. She was the widow of George Townsend, the first settler of Beaver Creek. The menu, prepared by Chef Kirk Weems, features a myriad of contemporary regional cuisine including prime aged meats, game, fish & fowl. 
+
+
+In the winter, Allie’s Cabin only accessible by sleigh, so be sure to wear your snow boots and heavy coat! Not to worry, there is a boot room in the cabin where you can store your warm clothes and change into your party shoes! The sleigh will pick you up in front of Centennial Station promptly at 6:00pm. Where is Centennial Station you ask? Don’t worry! You just need to know where the Christie Lodge is! You will be picked up in front of The Christie Lodge at 5:30, and dropped off right where the sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride -figuratively AND literally!
+
+Lodging: 
+
+The Christie Lodge*
+47 East Beaver Creek Boulevard
+Avon, Colorado 81620
+www.christielodge.com
+1-888-325-6343
+Promotional Code: FSWED
+
+Experience the comfort of the Christie Lodge nestled in the heart of Vail Valley minutes from Beaver Creek and Vail ski areas and many other attractions. We offer one and three bedroom condo-suites. Delight in the wonderful year round activities available to you within walking distance or a short ride from the Christie Lodge. World class skiing, dining and entertainment are just a few highlights of the pleasures that make our valley especially unforgettable.  
+
+Important note: While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014. 
+
+Option 1. One Bedroom Suites: The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum. 
+
+Option 2. Three Bedroom Suites: The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.
+
+Transportation: 
+	
+Flying in? 
+Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).
+
+Don’t want to drive?
+We recommend Colorado Mountain Express for your trip to and from the airport. If you mention that you are in town for a wedding, and you will receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at the Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events. 
+
+Up for a drive?
+ If you choose to drive, parking is free at the Christie Lodge. It is about a 2 hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. 
+
+From Denver International Airport: 
+Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. 
+
+From Eagle County Airport:
+Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. 
+
+
+
+
+
+AREA ACTIVITIES
+
+We chose to have our wedding on a Friday, so that our guests can plan to explore and enjoy all that Beaver Creek has to offer. On Saturday, Renee and Russell will be skiing Beaver Creek, and some other people plan to go tubing down the Haymaker Tubing Hill.  Interested? Let us coordinate for you! We are going to shop for the best rates possible for you to enjoy! 
+
+Please email us at ReneeRussell2015@gmail.com  and let us know the following:
+	
+Are you interested in skiing, tubing or both? 
+	Will you need rental equipment? 
+	Will you need a lift ticket?
+
+Before your flight leaves, we will get you the information you need to book your Saturday adventures.
+
+Other activities include: 
+
+Ice Skating
+Cross Country Skiing
+Snowshoeing
+Dining
+Spa -The Allegria Spa
+Spa- Bachelor Gulch Spa
+Spa- Spa Struck
+Nightlife -Coyote Café, 
+Nightlife- Dusty Boot  Steakhouse & Saloon 
+Nightlife- Theatre
+	 
+GUEST BOOK
+
+Sign our guest book and request a song you would like to hear at the reception! 
+
+GIFT IDEAS
+Renee and Russell are registered at Williams Sonoma, Macy’s and Amazon.com
+
+
+*Allie’s Cabin and the Christie Lodge are both pet free and smoke free environments. 
+
+ -->
