added design and image structure

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
 <div class="container">
-
-	<header class="name">
-		<h1>Renee & Russell</h1>
-		<h2>March 6, 2015</h2>
+	<header class="offset">
+		<a href="#">
+			<h1>Renee & Russell</h1>
+			<h2>March 6, 2015</h2>
+		</a>
 	</header>
 	<section class="main">
-		<ul>
+		<ul class="nav">
 			<li></li>
 			<li></li>
 			<li></li>
@@ -26,6 +27,7 @@
 			<li></li>
 		</ul>
 	</section>
+	<footer></footer>
 
 </div>
 </body>
