--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
 	<link rel="icon" type="image/png" href="img/icon.png">
+	<link href='http://fonts.googleapis.com/css?family=Engagement' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="container">
-	<header class="offset">
+	<header>
 		<a href="#">
 			<h1>Renee & Russell</h1>
 			<h2>March 6, 2015</h2>
+			<h3>Beaver Creek, Colorado</h3>
 		</a>
 	</header>
 	<section class="main">
 		<ul class="nav">
-			<li></li>
+			<!-- <li>this is a test</li> -->
 			<li></li>
 			<li></li>
 			<li></li>
