added styling to header and main to offset from background; added text styling to look like letterpress; removed link from header

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 <body>
 <div class="container">
 	<header>
-		<a href="#">
-			<h1>Renee & Russell</h1>
-			<h2>March 6, 2015</h2>
-			<h3>Beaver Creek, Colorado</h3>
-		</a>
+		<h1 class="press-heavy">Renee & Russell</h1>
+		<h2 class="press-light">March 6, 2015</h2>
+		<h3 class="press-light">Beaver Creek, Colorado</h3>
 	</header>
 	<section class="main">
 		<ul class="nav">
