--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 	</header>
 	<section class="main">
 		<ul class="nav group">
-			<!-- <li>this is a test</li> -->
 			<li><a href="#story">Our Story</a></li>
 			<li><a href="#party">Wedding Party</a></li>
 			<li><a href="#evening">The Evening</a></li>
@@ -57,131 +56,132 @@
 			</ol>
 		</article>	
 			
-		
+		<article id="party">
+			<h4>Wedding Party</h4>
+			<ol>
+				<li>Officiant – Lori Sassali</li>
+				<li>Matron of Honor- Hannah Emanuel</li>
+				<li>Best Man – Benjamin Cooper</li>
+				<li>Bridesmaid- Ellen Emanuel</li>
+				<li>Groomsmen – Jon Szerson</li>
+				<li>Flower Girl – Bella Sassali</li>
+			</ol>
+		</article>
 
-		<article id="party">WEDDING PARTY
-		
-				Officiant – Lori Sassali
-				Matron of Honor- Hannah Emanuel
-				Best Man – Benjamin Cooper
-				Bridesmaid- Ellen Emanuel
-				Groomsmen – Jon Szerson
-				Flower Girl – Bella Sassali</article>
+		<article id="evening">
+			<h4>The Evening</h4>
+			<p>The ceremony and reception will take place at Allie’s Cabin on Beaver Creek Mountain.</p>
+			<h5>This is the general timeline:</h5>
+			<ol>
+				<li>5:45 – Sleigh ride up to Allie’s Cabin</li>
+				<li>6:30 - Ceremony</li>
+				<li>7:00 – Dinner and dancing</li>
+			</ol>
+			<p>A shuttle will be available at 5:30 to take guests from The Christie Lodge to Beaver Creek Centennial Station where the sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
+			<p>*Allie’s Cabin and the Christie Lodge are both pet free and smoke free environments.</p>
+			<h5>What to Wear:</h5>
+			<p>March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your party shoes!</p>
+		</article>
 
-		<article id="evening">The Evening
-		
-				The ceremony and reception will take place at Allie’s Cabin on Beaver Creek Mountain.  
-		
-				5:45 – Sleigh ride up to Allie’s Cabin
-				6:30 - Ceremony
-				7:00 – Dinner and dancing 
-		
-				A shuttle will be available at 5:30 to take guests from The Christie Lodge to Beaver Creek Centennial Station where the sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride. 
-		
-				*Allie’s Cabin and the Christie Lodge are both pet free and smoke free environments. 
-		
-		
-				What to Wear: 
-		
-				March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your party shoes! </article>
+		<article id="lodging">
+			<h4>Lodging</h4>
+			<h5>The Bride & Groom will be staying at:</h5>
+			<p>
+				The Christie Lodge*<br>
+				47 East Beaver Creek Boulevard<br>
+				Avon, Colorado 81620<br>
+				www.christielodge.com<br>
+				1-888-325-6343<br>
+				Use Promotional Code: FSWED<br>
+			</p>	
+			<p>Important note: While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
+			<h5>The Christie Lodge has two options for our guests: </h5>
+			<h6>Option 1. One Bedroom Suites:</h6>
+			<p>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</p>
+			<h6>Option 2. Three Bedroom Suites:</h6>
+			<p>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</p>
+		</article>
 
-		<article id="lodging">Lodging: 
-		
-				The Bride & Groom will be staying at:
-		
-				The Christie Lodge*
-				47 East Beaver Creek Boulevard
-				Avon, Colorado 81620
-				www.christielodge.com
-				1-888-325-6343
-				Use Promotional Code: FSWED
-		
-				Important note: While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014. 
-		
-				The Christie Lodge has two options for our guests: 
-		
-				Option 1. One Bedroom Suites: The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum. 
-		
-				Option 2. Three Bedroom Suites: The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</article>
+		<article id="transportation">
+			<h4>Transportation</h4>
+			<h5>Flying in?</h5>
+			Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).
+			<h5>Don’t want to drive?</h5>
+			We recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events. 
+			<h5>Up for a drive?</h5>
+			<p>If you choose to drive, parking is free at the Christie Lodge. It is about a 2 hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. </p>
+			<h6>From Denver International Airport: </h6>
+			<p>Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. </p>
+			<h6>From Eagle County Airport:</h6>
+			<p>Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
+		</article>
 
-		<article id="transportation">Transportation: 
-					
-				Flying in? 
-				Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).
-		
-				Don’t want to drive?
-				We recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events. 
-		
-				Up for a drive?
-				If you choose to drive, parking is free at the Christie Lodge. It is about a 2 hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. 
-		
-				From Denver International Airport: 
-				Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. 
-		
-				From Eagle County Airport:
-				Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </article>
-
-
-
-
-
-		<article id="activities">AREA ACTIVITIES
-		
-				We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer.  On Saturday, Renee and Russell will be skiing Beaver Creek, and others plan to go tubing down the Haymaker Tubing Hill.  Interested? 
-		
-				To Do: 
-				Rent your equipment 
-				Get your lift ticket 
-				Ice Skate
-				Cross Country Ski
-				Snowshoe
-		
-				To Eat: 
-				Blue Moose Pizza
-				Vin48
-				Toscanini
-				Beaver Creek Chophouse
-				Mirabelle Restaurant
-				The Metropolitan
-		
-		
-				To Drink: 
-				Dusty Boot Saloon
-				Loaded Joe’s
-				Agave
-		
-				To Explore: 
-				Avon
-				Beaver Creek
-				Vail
-		
-				To Relax: 
-				Allegria Spa
-				Spa Struck
-				The Westin Riverfront Resort & Spa</article>
-
+		<article id="activities">
+			<h4>Area Activities</h4>
+			<p>We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be skiing Beaver Creek, and others plan to go tubing down the Haymaker Tubing Hill. Interested? </p>
+			<h5>To Do:</h5>
+			<ul>
+				<li>Rent your equipment </li>
+				<li>Get your lift ticket </li>
+				<li>Ice Skate</li>
+				<li>Cross Country Ski</li>
+				<li>Snowshoe</li>
+			</ul>
+			<h5>To Eat:</h5>
+			<ul>
+				<li>Blue Moose Pizza</li>
+				<li>Vin48</li>
+				<li>Toscanini</li>
+				<li>Beaver Creek Chophouse</li>
+				<li>Mirabelle Restaurant</li>
+				<li>The Metropolitan</li>
+			</ul>
+			<h5>To Drink:</h5>
+			<ul>
+				<li>Dusty Boot Saloon</li>
+				<li>Loaded Joe’s</li>
+				<li>Agave</li>
+			</ul>
+			<h5>To Explore:</h5>
+			<ul>
+				<li>Avon</li>
+				<li>Beaver Creek</li>
+				<li>Vail</li>
+			</ul>
+			<h5>To Relax:</h5>
+			<ul>
+				<li>Allegria Spa</li>
+				<li>Spa Struck</li>
+				<li>The Westin Riverfront Resort & Spa</li>
+			</ul>
+		</article>
 			 
 		<!-- <article>I’ll definitely dance if you promise to play….
-		
 				Sign our guest book and request a song you would like to hear at the reception! </article> -->
 
-		<article id="registry">Registry
-				Renee and Russell are registered at Sur La Table, Macy’s and Amazon.com</article>
-
+		<article id="registry">
+			<h4>Registry</h4>
+			<h5>Renee and Russell are registered at:</h5>
+			<ul>
+				<li><a href="#registry">Sur La Table</a></li>
+				<li><a href="#registry">Macy’s</a></li>
+				<li><a href="#registry">Amazon.com</a></li>
+			</ul>
+		</article>
 
 		<article id="behind">Behind Our Day
-		
-				Special thanks to the following people for helping us create wonderful memories: 
-		
-				Beaver Creek, Kim Selani and Katherine Pollock
-				Brilliant Earth
-				Greattime, DJ Fred Hammond
-				The Christie Lodge, Jill Russell
-				The Universal Life Church
-				Turtle Bus Bar, Tommy Turtle
-				Water Lily Events, Summer Norwell
-				Nate and Jenny Weddings</article>
-
+			<h5>Special thanks to the following people for helping us create wonderful memories:</h5>
+			<ul>	
+				<li>Beaver Creek, Kim Selani and Katherine Pollock</li>
+				<li>Brilliant Earth</li>
+				<li>Greattime, DJ Fred Hammond</li>
+				<li>The Christie Lodge, Jill Russell</li>
+				<li>The Universal Life Church</li>
+				<li>Turtle Bus Bar, Tommy Turtle</li>
+				<li>Water Lily Events, Summer Norwell</li>
+				<li>Nate and Jenny Weddings</li>
+			</ul>
+		</article>
 
 	</section>
 	<footer></footer>
