adjusting main shadow

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<h2 class="press-light">March 6, 2015</h2>
 		<h3 class="press-light">Beaver Creek, Colorado</h3>
 	</header>
-	<section class="main">
+	<article class="main">
 		<ul class="nav group">
 			<li><a href="#story">Our Story</a></li>
 			<li><a href="#party">Wedding Party</a></li>
@@ -29,7 +29,7 @@
 			<li><a href="#registry">Registry</a></li>
 		</ul>
 
-		<article id="story">
+		<section id="story">
 			<h4>Our Story</h4>
 			<h5>Chicago, 2010</h5>
 			<ol>
@@ -54,9 +54,9 @@
 				<li>husband and wife party with their family and friends in a cabin on a mountain</li>
 				<li>see you there!  </li>
 			</ol>
-		</article>	
+		</section>	
 			
-		<article id="party">
+		<section id="party">
 			<h4>Wedding Party</h4>
 			<ol>
 				<li>Officiant – Lori Sassali</li>
@@ -66,9 +66,9 @@
 				<li>Groomsmen – Jon Szerson</li>
 				<li>Flower Girl – Bella Sassali</li>
 			</ol>
-		</article>
+		</section>
 
-		<article id="evening">
+		<section id="evening">
 			<h4>The Evening</h4>
 			<p>The ceremony and reception will take place at Allie’s Cabin on Beaver Creek Mountain.</p>
 			<h5>This is the general timeline:</h5>
@@ -81,9 +81,9 @@
 			<p>*Allie’s Cabin and the Christie Lodge are both pet free and smoke free environments.</p>
 			<h5>What to Wear:</h5>
 			<p>March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your party shoes!</p>
-		</article>
+		</section>
 
-		<article id="lodging">
+		<section id="lodging">
 			<h4>Lodging</h4>
 			<h5>The Bride & Groom will be staying at:</h5>
 			<p>
@@ -100,9 +100,9 @@
 			<p>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</p>
 			<h6>Option 2. Three Bedroom Suites:</h6>
 			<p>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</p>
-		</article>
+		</section>
 
-		<article id="transportation">
+		<section id="transportation">
 			<h4>Transportation</h4>
 			<h5>Flying in?</h5>
 			Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).
@@ -114,9 +114,9 @@
 			<p>Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. </p>
 			<h6>From Eagle County Airport:</h6>
 			<p>Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
-		</article>
+		</section>
 
-		<article id="activities">
+		<section id="activities">
 			<h4>Area Activities</h4>
 			<p>We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be skiing Beaver Creek, and others plan to go tubing down the Haymaker Tubing Hill. Interested? </p>
 			<h5>To Do:</h5>
@@ -154,12 +154,12 @@
 				<li>Spa Struck</li>
 				<li>The Westin Riverfront Resort & Spa</li>
 			</ul>
-		</article>
+		</section>
 			 
-		<!-- <article>I’ll definitely dance if you promise to play….
-				Sign our guest book and request a song you would like to hear at the reception! </article> -->
+		<!-- <section>I’ll definitely dance if you promise to play….
+				Sign our guest book and request a song you would like to hear at the reception! </section> -->
 
-		<article id="registry">
+		<section id="registry">
 			<h4>Registry</h4>
 			<h5>Renee and Russell are registered at:</h5>
 			<ul>
@@ -167,9 +167,9 @@
 				<li><a href="#registry">Macy’s</a></li>
 				<li><a href="#registry">Amazon.com</a></li>
 			</ul>
-		</article>
+		</section>
 
-		<article id="behind">Behind Our Day
+		<section id="behind">Behind Our Day
 			<h5>Special thanks to the following people for helping us create wonderful memories:</h5>
 			<ul>	
 				<li>Beaver Creek, Kim Selani and Katherine Pollock</li>
@@ -181,9 +181,9 @@
 				<li>Water Lily Events, Summer Norwell</li>
 				<li>Nate and Jenny Weddings</li>
 			</ul>
-		</article>
+		</section>
 
-	</section>
+	</article>
 	<footer></footer>
 
 </div>
