added smooth scrolling js

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 	</header>
 	<article class="main">
 		<ul class="nav group">
-			<li><a href="#story">Our Story</a></li>
-			<li><a href="#party">Wedding Party</a></li>
-			<li><a href="#evening">The Evening</a></li>
-			<li><a href="#lodging">Lodging</a></li>
-			<li><a href="#transportation">Transportation</a></li>
-			<li><a href="#activities">Area Activities</a></li>
-			<li><a href="#registry">Registry</a></li>
+			<li><a href="#story" class="scroll" data-speed="1000">Our Story</a></li>
+			<li><a href="#party" class="scroll" data-speed="1000">Wedding Party</a></li>
+			<li><a href="#evening" class="scroll" data-speed="1000">The Evening</a></li>
+			<li><a href="#lodging" class="scroll" data-speed="1000">Lodging</a></li>
+			<li><a href="#transportation" class="scroll" data-speed="1000">Transportation</a></li>
+			<li><a href="#activities" class="scroll" data-speed="1000">Area Activities</a></li>
+			<li><a href="#registry" class="scroll" data-speed="1000">Registry</a></li>
 		</ul>
 
 		<section id="story">
@@ -187,5 +187,6 @@
 	<footer></footer>
 
 </div>
+<script src="scripts/main.js"></script>
 </body>
 </html>
