adjusted typopgraphy, alignment, and added js grid overlay

--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 
 <html lang="en">
 <head>
-	<title>Renee & Russell Wedding</title>
+	<title>Renee &#38; Russell Wedding</title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
 	<link rel="icon" type="image/png" href="img/icon.png">
-	<link href='http://fonts.googleapis.com/css?family=Engagement' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+<div class="jquery-grid">
+  <div class="jquery-grid-container">
+    <div class="col-1-4 jquery-grid-col"></div>
+    <div class="col-1-4 jquery-grid-col"></div>
+    <div class="col-1-4 jquery-grid-col"></div>
+    <div class="col-1-4 jquery-grid-col"></div>
+  </div>
+</div>
+
 <div class="container">
 	<header>
 		<h1 class="press-heavy">Renee & Russell</h1>
@@ -66,7 +72,7 @@
 		<section id="evening">
 			<h4>The Evening</h4>
 			<p>The ceremony and reception will take place at Allie’s Cabin on Beaver Creek Mountain.</p>
-			<h5>This is the general timeline:</h5>
+			<h5>General Timeline:</h5>
 			<ol>
 				<li>5:45 – Sleigh ride up to Allie’s Cabin</li>
 				<li>6:30 - Ceremony</li>
@@ -182,6 +188,8 @@
 	<footer></footer>
 
 </div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="scripts/main.js"></script>
 </body>
 </html>
