adjusting typography and sass variables

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<section id="story">
 			<h4>Our Story</h4>
-			<h5>Chicago, 2010</h5>
+			<h5 class="hr">Chicago, 2010</h5>
 			<ol>
 				<li>girl meets boy’s stepmom.</li>
 				<li>girl sends Facebook message to boy about the weather and giggles.</li>
