adding fonts to play with

--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
 </head>
 <body>
 
-<div class="jquery-grid">
+<!-- <div class="jquery-grid">
   <div class="jquery-grid-container">
-    <div class="col-1-4 jquery-grid-col"></div>
-    <div class="col-1-4 jquery-grid-col"></div>
-    <div class="col-1-4 jquery-grid-col"></div>
-    <div class="col-1-4 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
+    <div class="col-1-12 jquery-grid-col"></div>
   </div>
-</div>
+</div> -->
 
 <div class="container">
 	<header>
-		<h1 class="press-heavy">Renee & Russell</h1>
+		<h1 class="press-heavy">Renee &amp; Russell</h1>
 		<h2 class="press-light">March 6, 2015</h2>
 		<h3 class="press-light">Beaver Creek, Colorado</h3>
 	</header>
@@ -86,7 +94,7 @@
 
 		<section id="lodging">
 			<h4>Lodging</h4>
-			<h5>The Bride & Groom will be staying at:</h5>
+			<h5>The Bride &amp; Groom will be staying at:</h5>
 			<p>
 				The Christie Lodge*<br>
 				47 East Beaver Creek Boulevard<br>
@@ -106,9 +114,9 @@
 		<section id="transportation">
 			<h4>Transportation</h4>
 			<h5>Flying in?</h5>
-			Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).
+			<p>Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).</p>
 			<h5>Don’t want to drive?</h5>
-			We recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events. 
+			<p>We recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events.</p>
 			<h5>Up for a drive?</h5>
 			<p>If you choose to drive, parking is free at the Christie Lodge. It is about a 2 hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. </p>
 			<h6>From Denver International Airport: </h6>
@@ -153,7 +161,7 @@
 			<ul>
 				<li>Allegria Spa</li>
 				<li>Spa Struck</li>
-				<li>The Westin Riverfront Resort & Spa</li>
+				<li>The Westin Riverfront Resort &amp; Spa</li>
 			</ul>
 		</section>
 			 
@@ -170,7 +178,8 @@
 			</ul>
 		</section>
 
-		<section id="behind">Behind Our Day
+		<section id="behind">
+			<h4>Behind Our Day</h4>
 			<h5>Special thanks to the following people for helping us create wonderful memories:</h5>
 			<ul>	
 				<li>Beaver Creek, Kim Selani and Katherine Pollock</li>
