adjusting all typefaces

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<li>boy moves to Chicago.</li>
 				<li>boy and girl move in together.</li>
 			</ol>
-			<h5 class="hide">Colorado, 2014</h5>
+			<!-- <h5>Colorado, 2014</h5> -->
 			<h5>Beaver Creek, 2015</h5>
 			<ol>
 				<li>boy and girl get married</li>
