reworked activities section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!Doctype HTML/>
+<!DOCTYPE html/>
 
 <html lang="en">
 <head>
@@ -8,23 +8,6 @@
 	<link rel="icon" type="image/png" href="img/icon.png">
 </head>
 <body>
-
-<!-- <div class="jquery-grid">
-  <div class="jquery-grid-container">
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-    <div class="col-1-12 jquery-grid-col"></div>
-  </div>
-</div> -->
 
 <div class="container">
 	<header>
@@ -49,14 +32,15 @@
 			<ol>
 				<li>girl meets boy’s stepmom.</li>
 				<li>girl sends Facebook message to boy about the weather and giggles.</li>
-				<li>boy laughs to himself because girl’s message is…terrible.</li>
+				<li>boy laughs to himself because girl’s message is …terrible.</li>
 				<li>boy and girl meet.</li>
 				<li>spring turns to summer.</li>
 				<li>boy and girl fall in love.</li>
 				<li>boy moves to Chicago.</li>
 				<li>boy and girl move in together.</li>
+				<li>boy politely asks girl to marry him</li>
+				<li>boy and girl move to Colorado</li>
 			</ol>
-			<!-- <h5>Colorado, 2014</h5> -->
 			<h5>Beaver Creek, 2015</h5>
 			<ol>
 				<li>boy and girl get married</li>
@@ -72,8 +56,9 @@
 				<li>Matron of Honor- Hannah Emanuel</li>
 				<li>Best Man – Benjamin Cooper</li>
 				<li>Bridesmaid- Ellen Emanuel</li>
-				<li>Groomsmen – Jon Szerson</li>
+				<li>Groomsman – Jon Szerszen</li>
 				<li>Flower Girl – Bella Sassali</li>
+				<li>Usher – Michael Ripaldi</li>
 			</ol>
 		</section>
 
@@ -125,44 +110,54 @@
 			<p>Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
 		</section>
 
-		<section id="activities">
+		<section id="activities" class="group">
 			<h4>Area Activities</h4>
 			<p>We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be skiing Beaver Creek, and others plan to go tubing down the Haymaker Tubing Hill. Interested? </p>
-			<h5>To Do:</h5>
-			<ul>
-				<li>Rent your equipment </li>
-				<li>Get your lift ticket </li>
-				<li>Ice Skate</li>
-				<li>Cross Country Ski</li>
-				<li>Snowshoe</li>
-			</ul>
-			<h5>To Eat:</h5>
-			<ul>
-				<li>Blue Moose Pizza</li>
-				<li>Vin48</li>
-				<li>Toscanini</li>
-				<li>Beaver Creek Chophouse</li>
-				<li>Mirabelle Restaurant</li>
-				<li>The Metropolitan</li>
-			</ul>
-			<h5>To Drink:</h5>
-			<ul>
-				<li>Dusty Boot Saloon</li>
-				<li>Loaded Joe’s</li>
-				<li>Agave</li>
-			</ul>
-			<h5>To Explore:</h5>
-			<ul>
-				<li>Avon</li>
-				<li>Beaver Creek</li>
-				<li>Vail</li>
-			</ul>
-			<h5>To Relax:</h5>
-			<ul>
-				<li>Allegria Spa</li>
-				<li>Spa Struck</li>
-				<li>The Westin Riverfront Resort &amp; Spa</li>
-			</ul>
+			<div class="activity">
+				<h5>To Do:</h5>
+				<ul>
+					<li><a href="#" target="_blank">Rent your equipment</a></li>
+					<li><a href="#" target="_blank">Get your lift ticket</a></li>
+					<li><a href="#" target="_blank">Ice Skate</a></li>
+					<li><a href="#" target="_blank">Cross Country Ski</a></li>
+					<li><a href="#" target="_blank">Snowshoe</a></li>
+				</ul>
+			</div>
+			<div class="activity">
+				<h5>To Eat:</h5>
+				<ul>
+					<li><a href="#" target="_blank">Blue Moose Pizza</a></li>
+					<li><a href="#" target="_blank">Vin48</a></li>
+					<li><a href="#" target="_blank">Toscanini</a></li>
+					<li><a href="#" target="_blank">Beaver Creek Chophouse</a></li>
+					<li><a href="#" target="_blank">Mirabelle Restaurant</a></li>
+					<li><a href="#" target="_blank">The Metropolitan</a></li>
+				</ul>
+			</div>
+			<div class="activity">
+				<h5>To Drink:</h5>
+				<ul>
+					<li><a href="#" target="_blank">Dusty Boot Saloon</a></li>
+					<li><a href="#" target="_blank">Loaded Joe’s</a></li>
+					<li><a href="#" target="_blank">Agave</a></li>
+				</ul>
+			</div>
+			<div class="activity">
+				<h5>To Explore:</h5>
+				<ul>
+					<li><a href="#" target="_blank">Avon</a></li>
+					<li><a href="#" target="_blank">Beaver Creek</a></li>
+					<li><a href="#" target="_blank">Vail</a></li>
+				</ul>
+			</div>
+			<div class="activity">
+				<h5>To Relax:</h5>
+				<ul>
+					<li><a href="#" target="_blank">Allegria Spa</a></li>
+					<li><a href="#" target="_blank">Spa Struck</a></li>
+					<li><a href="#" target="_blank">The Westin Riverfront Resort &amp; Spa</a></li>
+				</ul>
+			</div>
 		</section>
 			 
 		<!-- <section>I’ll definitely dance if you promise to play….
@@ -180,16 +175,16 @@
 
 		<section id="behind">
 			<h4>Behind Our Day</h4>
-			<h5>Special thanks to the following people for helping us create wonderful memories:</h5>
+			<h6>Special thanks to the following people for helping us create wonderful memories:</h6>
 			<ul>	
-				<li>Beaver Creek, Kim Selani and Katherine Pollock</li>
-				<li>Brilliant Earth</li>
-				<li>Greattime, DJ Fred Hammond</li>
-				<li>The Christie Lodge, Jill Russell</li>
-				<li>The Universal Life Church</li>
-				<li>Turtle Bus Bar, Tommy Turtle</li>
-				<li>Water Lily Events, Summer Norwell</li>
-				<li>Nate and Jenny Weddings</li>
+				<li><a href="#" target="_blank">Beaver Creek, Kim Selani and Katherine Pollock</a></li>
+				<li><a href="#" target="_blank">Brilliant Earth</a></li>
+				<li><a href="#" target="_blank">Greattime, DJ Fred Hammond</a></li>
+				<li><a href="#" target="_blank">The Christie Lodge, Jill Russell</a></li>
+				<li><a href="#" target="_blank">The Universal Life Church</a></li>
+				<li><a href="#" target="_blank">Turtle Bus Bar, Tommy Turtle</a></li>
+				<li><a href="#" target="_blank">Water Lily Events, Summer Norwell</a></li>
+				<li><a href="#" target="_blank">Nate and Jenny Weddings</a></li>
 			</ul>
 		</section>
 
