--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<section id="story">
 			<h4>Our Story</h4>
-			<h5 class="hr">Chicago, 2010</h5>
+			<h5>Chicago, 2010</h5>
 			<ol>
 				<li>girl meets boy’s stepmom.</li>
 				<li>girl sends Facebook message to boy about the weather and giggles.</li>
@@ -38,14 +38,13 @@
 				<li>boy and girl fall in love.</li>
 				<li>boy moves to Chicago.</li>
 				<li>boy and girl move in together.</li>
-				<li>boy politely asks girl to marry him</li>
-				<li>boy and girl move to Colorado</li>
+				<li>boy politely asks girl to marry him.</li>
+				<li>boy and girl move to Colorado.</li>
 			</ol>
 			<h5>Beaver Creek, 2015</h5>
 			<ol>
-				<li>boy and girl get married</li>
-				<li>husband and wife party with their family and friends in a cabin on a mountain</li>
-				<li>see you there!  </li>
+				<li>boy and girl get married.</li>
+				<li>husband and wife party with their family and friends in a cabin on a mountain.</li>
 			</ol>
 		</section>	
 			
