added conditional stylesheet for ie8 and below

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
 	<link rel="icon" type="image/png" href="img/icon.png">
+	<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="ie8-and-down.css" /><![endif]-->
 </head>
 <body>
 
