added font fallbacks, fixed nav, added links

--- a/index.html
+++ b/index.html
@@ -81,18 +81,18 @@
 			<h4>Lodging</h4>
 			<h5>The Bride &amp; Groom will be staying at:</h5>
 			<p>
-				The Christie Lodge*<br>
+				<a href="http://www.christielodge.com/" target="_blank">The Christie Lodge</a><br>
 				47 East Beaver Creek Boulevard<br>
 				Avon, Colorado 81620<br>
-				www.christielodge.com<br>
+				<a href="http://www.christielodge.com/" target="_blank">www.christielodge.com</a><br>
 				1-888-325-6343<br>
 				Use Promotional Code: FSWED<br>
 			</p>	
 			<p>Important note: While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
 			<h5>The Christie Lodge has two options for our guests: </h5>
-			<h6>Option 1. One Bedroom Suites:</h6>
+			<h6>Option 1. <a href="http://www.christielodge.com/one-bedroom-suites/" target="_blank">One Bedroom Suites</a>:</h6>
 			<p>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</p>
-			<h6>Option 2. Three Bedroom Suites:</h6>
+			<h6>Option 2. <a href="http://www.christielodge.com/three-bedroom-suites/" target="_blank">Three Bedroom Suites</a>:</h6>
 			<p>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</p>
 		</section>
 
@@ -112,50 +112,50 @@
 
 		<section id="activities" class="group">
 			<h4>Area Activities</h4>
-			<p>We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be skiing Beaver Creek, and others plan to go tubing down the Haymaker Tubing Hill. Interested? </p>
+			<p>We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a>, and others plan to go tubing down the <a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a>. Interested? </p>
 			<div class="activity">
 				<h5>To Do:</h5>
 				<ul>
-					<li><a href="#" target="_blank">Rent your equipment</a></li>
-					<li><a href="#" target="_blank">Get your lift ticket</a></li>
-					<li><a href="#" target="_blank">Ice Skate</a></li>
-					<li><a href="#" target="_blank">Cross Country Ski</a></li>
-					<li><a href="#" target="_blank">Snowshoe</a></li>
+					<li><a href="http://www.beavercreek.com/plan-your-trip/equipment-rentals/ski-and-snowboard-rentals.aspx" target="_blank">Rent your equipment</a></li>
+					<li><a href="http://www.beavercreek.com/plan-your-trip/lift-tickets/lift-tickets-search.aspx" target="_blank">Get your lift ticket</a></li>
+					<li><a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Ice Skate</a></li>
+					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#crosscountry#Top" target="_blank">Cross Country Ski</a></li>
+					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#snowshoe#Top" target="_blank">Snowshoe</a></li>
 				</ul>
 			</div>
 			<div class="activity">
 				<h5>To Eat:</h5>
 				<ul>
-					<li><a href="#" target="_blank">Blue Moose Pizza</a></li>
-					<li><a href="#" target="_blank">Vin48</a></li>
-					<li><a href="#" target="_blank">Toscanini</a></li>
-					<li><a href="#" target="_blank">Beaver Creek Chophouse</a></li>
-					<li><a href="#" target="_blank">Mirabelle Restaurant</a></li>
-					<li><a href="#" target="_blank">The Metropolitan</a></li>
+					<li><a href="http://bluemoosepizza.com/" target="_blank">Blue Moose Pizza</a></li>
+					<li><a href="http://vin48.com/" target="_blank">Vin48</a></li>
+					<li><a href="http://www.toscaninibeavercreek.com/toscanini/" target="_blank">Toscanini</a></li>
+					<li><a href="http://www.beavercreekchophouse.com/" target="_blank">Beaver Creek Chophouse</a></li>
+					<li><a href="http://www.mirabelle1.com/" target="_blank">Mirabelle Restaurant</a></li>
+					<li><a href="http://www.themetbc.com/" target="_blank">The Metropolitan</a></li>
 				</ul>
 			</div>
 			<div class="activity">
 				<h5>To Drink:</h5>
 				<ul>
-					<li><a href="#" target="_blank">Dusty Boot Saloon</a></li>
-					<li><a href="#" target="_blank">Loaded Joe’s</a></li>
-					<li><a href="#" target="_blank">Agave</a></li>
+					<li><a href="http://dustyboot.com/" target="_blank">Dusty Boot Saloon</a></li>
+					<li><a href="http://loadedjoes.com/" target="_blank">Loaded Joe’s</a></li>
+					<li><a href="http://www.agaveavon.com/" target="_blank">Agave</a></li>
 				</ul>
 			</div>
 			<div class="activity">
 				<h5>To Explore:</h5>
 				<ul>
-					<li><a href="#" target="_blank">Avon</a></li>
-					<li><a href="#" target="_blank">Beaver Creek</a></li>
-					<li><a href="#" target="_blank">Vail</a></li>
+					<li><a href="http://www.visitavoncolorado.com/" target="_blank">Avon</a></li>
+					<li><a href="http://www.beavercreek.com/" target="_blank">Beaver Creek</a></li>
+					<li><a href="http://www.vail.com/" target="_blank">Vail</a></li>
 				</ul>
 			</div>
 			<div class="activity">
 				<h5>To Relax:</h5>
 				<ul>
-					<li><a href="#" target="_blank">Allegria Spa</a></li>
-					<li><a href="#" target="_blank">Spa Struck</a></li>
-					<li><a href="#" target="_blank">The Westin Riverfront Resort &amp; Spa</a></li>
+					<li><a href="http://www.allegriaspa.com/" target="_blank">Allegria Spa</a></li>
+					<li><a href="http://www.spastruck.com/" target="_blank">Spa Struck</a></li>
+					<li><a href="http://www.westinriverfrontbeavercreek.com/" target="_blank">The Westin Riverfront Resort &amp; Spa</a></li>
 				</ul>
 			</div>
 		</section>
@@ -167,9 +167,9 @@
 			<h4>Registry</h4>
 			<h5>Renee and Russell are registered at:</h5>
 			<ul>
-				<li><a href="#registry">Sur La Table</a></li>
-				<li><a href="#registry">Macy’s</a></li>
-				<li><a href="#registry">Amazon.com</a></li>
+				<li><a href="http://www.surlatable.com/registry/giftRegistryList.jsp?id=200843885220">Sur La Table</a></li>
+				<li><a href="http://www1.macys.com/registry/wedding/guest/?registryId=6036143">Macy’s</a></li>
+				<!-- <li><a href="#registry">Amazon.com</a></li> -->
 			</ul>
 		</section>
 
@@ -177,14 +177,14 @@
 			<h4>Behind Our Day</h4>
 			<h6>Special thanks to the following people for helping us create wonderful memories:</h6>
 			<ul>	
-				<li><a href="#" target="_blank">Beaver Creek, Kim Selani and Katherine Pollock</a></li>
-				<li><a href="#" target="_blank">Brilliant Earth</a></li>
-				<li><a href="#" target="_blank">Greattime, DJ Fred Hammond</a></li>
-				<li><a href="#" target="_blank">The Christie Lodge, Jill Russell</a></li>
-				<li><a href="#" target="_blank">The Universal Life Church</a></li>
-				<li><a href="#" target="_blank">Turtle Bus Bar, Tommy Turtle</a></li>
-				<li><a href="#" target="_blank">Water Lily Events, Summer Norwell</a></li>
-				<li><a href="#" target="_blank">Nate and Jenny Weddings</a></li>
+				<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx" target="_blank">Beaver Creek, Kim Selani and Katherine Pollock</a></li>
+				<li><a href="http://www.brilliantearth.com/" target="_blank">Brilliant Earth</a></li>
+				<li><a href="http://www.greatimedj.com/" target="_blank">Greattime, DJ Fred Hammond</a></li>
+				<li><a href="http://www.christielodge.com/" target="_blank">The Christie Lodge, Jill Russell</a></li>
+				<li><a href="http://www.ulc.org/" target="_blank">The Universal Life Church</a></li>
+				<li><a href="http://turtlebusbar.com/" target="_blank">Turtle Bus Bar, Tommy Turtle</a></li>
+				<li><a href="https://www.facebook.com/waterlilyevents" target="_blank">Water Lily Events, Summer Norwell</a></li>
+				<li><a href="http://www.nateandjennyweddings.com/" target="_blank">Nate and Jenny Weddings</a></li>
 			</ul>
 		</section>
 
