--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
 	<link rel="icon" type="image/png" href="img/icon.png">
-	<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="ie8-and-down.css" /><![endif]-->
+	<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="styles/ie8-and-down.css" /><![endif]-->
 </head>
 <body>
 
@@ -155,7 +155,7 @@
 				<ul>
 					<li><a href="http://www.allegriaspa.com/" target="_blank">Allegria Spa</a></li>
 					<li><a href="http://www.spastruck.com/" target="_blank">Spa Struck</a></li>
-					<li><a href="http://www.westinriverfrontbeavercreek.com/" target="_blank">The Westin Riverfront Resort &amp; Spa</a></li>
+					<li><a href="http://www.westinriverfrontbeavercreek.com/" target="_blank">Riverfront Resort &amp; Spa</a></li>
 				</ul>
 			</div>
 		</section>
