--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="styles/main.css"/>
 	<link rel="icon" type="image/png" href="img/icon.png">
-	<!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="styles/ie8-and-down.css" /><![endif]-->
+	<!--[if lt IE 9]>
+		<link rel="stylesheet" type="text/css" href="styles/ie8-and-down.css" />
+		<script src="scripts/html5shiv.js"></script>
+	<![endif]-->
 </head>
 <body>
 
